import static assertEquals